--- a/Selection/Base.lproj/Main.storyboard
+++ b/Selection/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="0e7-CV-sd2" kind="push" id="Kgj-qT-WK8"/>
+                                    <action selector="startSelection:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZpV-nn-xIT"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZt-wr-03z">
@@ -110,7 +110,7 @@
         <!--Select View Controller - 投票-->
         <scene sceneID="srp-Ef-YNu">
             <objects>
-                <viewController id="0e7-CV-sd2" customClass="TACSelectViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="selectVC" id="0e7-CV-sd2" customClass="TACSelectViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zA0-u0-nst"/>
                         <viewControllerLayoutGuide type="bottom" id="Wbp-nL-HKt"/>
